feat: udistrital/sga_documentacion#572 visualizacion de documentos
se implementa componente para visualizar documentos durante coevaluacionII
